뷰 페이지 수정

--- a/WebContent/css/register.css
+++ b/WebContent/css/register.css
@@ -2409,9 +2409,11 @@ textarea.form-control-lg {
           appearance: none;
 }
 .form-select:focus, .dataTable-selector:focus {
-  border-color: #86b7fe;
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  color: #3a3a3a;
+  background-color: #fff;
+  border-color: #c79cf5;
+  outline: 0;/* 검색버튼 */
+  box-shadow: 0 0 0 0.15rem #ddc4f9;
 }
 .form-select[multiple], [multiple].dataTable-selector, .form-select[size]:not([size="1"]), [size].dataTable-selector:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2423,6 +2425,7 @@ textarea.form-control-lg {
 .form-select:-moz-focusring, .dataTable-selector:-moz-focusring {
   color: transparent;
   text-shadow: 0 0 0 #212529;
+  
 }
 
 .form-select-sm {
@@ -2684,10 +2687,7 @@ textarea.form-control-lg {
   padding-top: 1.625rem;
   padding-bottom: 0.625rem;
 }
-.form-floating > .form-select, .form-floating > .dataTable-selector {
-  padding-top: 1.625rem;
-  padding-bottom: 0.625rem;
-}
+
 .form-floating > .form-control:not(:-moz-placeholder-shown) ~ label, .form-floating > .dataTable-input:not(:-moz-placeholder-shown) ~ label {
   opacity: 0.65;
   transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
