--- a/WebContent/css/mainpage.css
+++ b/WebContent/css/mainpage.css
@@ -6952,6 +6952,14 @@ textarea.form-control-lg {
   margin-top: 3rem !important;
 }
 
+.mt-6 {
+  margin-top: 3.5rem !important;
+}
+
+.mt-7 {
+  margin-top: 17rem !important;
+}
+
 .mt-auto {
   margin-top: auto !important;
 }
