--- a/WebContent/css/register0.css
+++ b/WebContent/css/register0.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
-
+/*!
+* Start Bootstrap - SB Admin v7.0.1 (https://startbootstrap.com/template/sb-admin)
+* Copyright 2013-2021 Start Bootstrap
+* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-sb-admin/blob/master/LICENSE)
+*/
+/*!
+ * Bootstrap v5.0.1 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
+ 
 @font-face {
   /* font-family가 지정된 속성에 ttf 파일이 모두 적용됨. */
   font-family: muhobbyfont;	
@@ -11,7 +22,8 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video{
 	font-family: muhobbyfont;
 }
-
+ 
+ 
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -53,7 +65,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 body {
   margin: 0;
-  font-family: "muhobbyfont", ;
+  font-family: var(--bs-font-sans-serif);
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -225,7 +237,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: muhobbyfont;
+  font-family: var(--bs-font-monospace);
   font-size: 1em;
   direction: ltr /* rtl:ignore */;
   unicode-bidi: bidi-override;
@@ -321,7 +333,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: muhobbyfont;
+  font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
@@ -748,7 +760,7 @@ progress {
 }
 
 .first {
-	/* border: 1px solid blue; */ 
+	/* border: 1px solid blue; */
     float: left;
     text-align: center;
     width:20%;
@@ -756,7 +768,7 @@ progress {
 }
 
 .second{
-	/* border: 1px solid blue; */ 
+	/* border: 1px solid blue; */
     float: left;
     margin-left: 5%;
     width:30%;
@@ -764,7 +776,7 @@ progress {
 }
 
 .third{
-	/* border: 1px solid blue; */
+	border: 1px solid blue;
     float: right;
     width:30%;
     box-sizing: border-box;
@@ -2397,9 +2409,9 @@ textarea.form-control-lg {
           appearance: none;
 }
 .form-select:focus, .dataTable-selector:focus {
-  border-color: #c79cf5;
+  border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 0.20rem #ddc4f9;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 .form-select[multiple], [multiple].dataTable-selector, .form-select[size]:not([size="1"]), [size].dataTable-selector:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2664,10 +2676,7 @@ textarea.form-control-lg {
   padding-top: 1.625rem;
   padding-bottom: 0.625rem;
 }
-.form-floating > .form-control:focus, .form-floating > .dataTable-input:focus, .form-floating > .form-control:not(:placeholder-shown), .form-floating > .dataTable-input:not(:placeholder-shown) {
-  padding-top: 1.625rem;
-  padding-bottom: 0.625rem;
-}
+
 .form-floating > .form-control:-webkit-autofill, .form-floating > .dataTable-input:-webkit-autofill {
   padding-top: 1.625rem;
   padding-bottom: 0.625rem;
@@ -3423,18 +3432,6 @@ textarea.form-control-lg {
   background-color: #c79cf5;
 }
 
-.btn-outline-light2 {
-  color: #8080ff;
-  border-color: #8080ff;
-  background-color: #c79cf5;
-}
-
-.btn-outline-light2:hover {
-  color: #c79cf5;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
-}
-
 .btn-hobby {
   color: #3a3a3a;
   border-color: #cacaca;
@@ -3795,13 +3792,13 @@ textarea.form-control-lg {
   border: 0;
 }
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #c79cf5;
+  color: #1e2125;
   background-color: #e9ecef;
 }
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #c79cf5;
+  background-color: #0d6efd;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -4666,7 +4663,7 @@ textarea.form-control-lg {
 .page-link, .dataTable-pagination a {
   position: relative;
   display: block;
-  color: #3a3a3a;
+  color: #0d6efd;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4679,14 +4676,16 @@ textarea.form-control-lg {
 }
 .page-link:hover, .dataTable-pagination a:hover {
   z-index: 2;
-  color: #c79cf5;
+  color: #0a58ca;
+  background-color: #e9ecef;
   border-color: #dee2e6;
 }
-
 .page-link:focus, .dataTable-pagination a:focus {
   z-index: 3;
-  color: #c79cf5;
-  background-color: #ddc4f9;
+  color: #0a58ca;
+  background-color: #e9ecef;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 
 .page-item:not(:first-child) .page-link, .page-item:not(:first-child) .dataTable-pagination a, .dataTable-pagination .page-item:not(:first-child) a, .dataTable-pagination li:not(:first-child) .page-link, .dataTable-pagination li:not(:first-child) a {
@@ -4695,8 +4694,8 @@ textarea.form-control-lg {
 .page-item.active .page-link, .page-item.active .dataTable-pagination a, .dataTable-pagination .page-item.active a, .dataTable-pagination li.active .page-link, .dataTable-pagination li.active a {
   z-index: 3;
   color: #fff;
-  background-color: #ddc4f9;
-
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
 .page-item.disabled .page-link, .page-item.disabled .dataTable-pagination a, .dataTable-pagination .page-item.disabled a, .dataTable-pagination li.disabled .page-link, .dataTable-pagination li.disabled a {
   color: #6c757d;
@@ -5622,7 +5621,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: muhobbyfont;
+  font-family: var(--bs-font-sans-serif);
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5724,7 +5723,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: muhobbyfont;
+  font-family: var(--bs-font-sans-serif);
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -7053,10 +7052,6 @@ textarea.form-control-lg {
   margin-top: 3rem !important;
 }
 
-.mt-6 {
-  margin-top: 5rem !important;
-}
-
 .mt-auto {
   margin-top: auto !important;
 }
@@ -7081,9 +7076,6 @@ textarea.form-control-lg {
   margin-right: 1.5rem !important;
 }
 
-.mee3{
-  margin-right: 2.65rem !important;
-}
 .me-5 {
   margin-right: 3rem !important;
 }
@@ -7123,9 +7115,6 @@ textarea.form-control-lg {
 .ms-0 {
   margin-left: 0 !important;
 }
-.mss-1 {
-  margin-left: 0.125rem !important;
-}
 
 .ms-1 {
   margin-left: 0.25rem !important;
@@ -7143,9 +7132,6 @@ textarea.form-control-lg {
   margin-left: 1.5rem !important;
 }
 
-.mss3{
-  margin-left: 2.7rem !important;	
-}
 .ms-5 {
   margin-left: 3rem !important;
 }
@@ -7155,43 +7141,11 @@ textarea.form-control-lg {
 }
 
 .ms-7 {
-  margin-left: 4.0rem !important;
-}
-
-.ms-8 {
-  margin-left: 4.5rem !important;
-}
-
-.ms-9 {
-  margin-left: 5.0rem !important;
-}
-
-.ms-10 {
-  margin-left: 5.5rem !important;
-}
-
-.ms-11 {
-  margin-left: 6.0rem !important;
-}
-
-.ms-12 {
-  margin-left: 6.5rem !important;
-}
-
-.ms-13 {
   margin-left: 7.0rem !important;
 }
 
-.ms-14 {
-  margin-left: 7.5rem !important;
-}
-
-.ms-15 {
-  margin-left: 8.0rem !important;
-}
-
 .ms-18 {
-  margin-left: 8.5rem !important;
+  margin-left: 18.3rem !important;
 }
 
 .ms-auto {
@@ -7379,7 +7333,7 @@ textarea.form-control-lg {
 }
 
 .font-monospace {
-  font-family: muhobbyfont !important;
+  font-family: var(--bs-font-monospace) !important;
 }
 
 .fs-1 {
@@ -7566,7 +7520,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #c173e0!important;
+  background-color: #0d6efd !important;
 }
 
 .bg-secondary {
@@ -7582,7 +7536,7 @@ textarea.form-control-lg {
 }
 
 .bg-background {
-  background-color: #f9f5fe!important;
+  background-color: #f3ecfd !important;
 }
 
 /* #c79cf5 */
@@ -11255,7 +11209,7 @@ body {
 }
 
 .dataTable-wrapper .dataTable-container {
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 
 .dataTable-wrapper.no-header .dataTable-container {
@@ -11272,21 +11226,20 @@ body {
 
 .dataTable-bottom {
   padding: 0;
-  align-items: center;
 }
 
 .dataTable-top > nav:first-child,
 .dataTable-top > div:first-child,
 .dataTable-bottom > nav:first-child,
 .dataTable-bottom > div:first-child {
-	float: right;
+  float: left;
 }
 
 .dataTable-top > nav:last-child,
 .dataTable-top > div:last-child,
 .dataTable-bottom > nav:last-child,
 .dataTable-bottom > div:last-child {
-  	float: left;
+  float: right;
 }
 
 .dataTable-selector {
@@ -11309,7 +11262,7 @@ body {
 .dataTable-pagination .active a,
 .dataTable-pagination .active a:focus,
 .dataTable-pagination .active a:hover {
-  background-color: #c79cf5;
+  background-color: #0d6efd;
 }
 
 .dataTable-pagination .ellipsis a,
@@ -11426,40 +11379,4 @@ body {
   pointer-events: none;
 }
 
-.bold{
-	font-weight: bold;	
-}
 
-.pagination{display:inline-block;padding-left:0;margin:20px 0;border-radius:4px}
-.pagination>li{display:inline}.pagination>li>a,
-.pagination>li>span{position:relative;float:left;padding:6px 12px;margin-left:-1px;line-height:1.42857143;color:#337ab7;text-decoration:none;background-color:#fff;border:1px solid #ddd}
-.pagination>li:first-child>a,.pagination>li:first-child>span{margin-left:0;border-top-left-radius:4px;border-bottom-left-radius:4px}
-.pagination>li:last-child>a,.pagination>li:last-child>span{border-top-right-radius:4px;border-bottom-right-radius:4px}
-
-.pagination>li>a:focus,
-.pagination>li>a:hover,
-.pagination>li>span:focus,
-.pagination>li>span:hover{color:#23527c;background-color:#eee;border-color:#ddd}
-
-.pagination>.active>a,
-.pagination>.active>a:focus,
-.pagination>.active>a:hover,
-.pagination>.active>span,
-.pagination>.active>span:focus,.pagination>
-.active>span:hover{z-index:2;color:#fff;cursor:default;background-color:#337ab7;border-color:#337ab7}
-
-.pagination>.disabled>a,
-.pagination>.disabled>a:focus,
-.pagination>.disabled>a:hover,
-.pagination>.disabled>span,
-.pagination>.disabled>span:focus,
-.pagination>.disabled>span:hover{color:#777;cursor:not-allowed;background-color:#fff;border-color:#ddd}
-.pagination-lg>li>a,.pagination-lg>li>span{padding:10px 16px;font-size:18px}
-.pagination-lg>li:first-child>a,.pagination-lg>li:first-child>span{border-top-left-radius:6px;border-bottom-left-radius:6px}
-.pagination-lg>li:last-child>a,.pagination-lg>li:last-child>span{border-top-right-radius:6px;border-bottom-right-radius:6px}
-
-.pagination-sm>li>a,.pagination-sm>li>span{padding:5px 10px;font-size:12px}
-
-.pagination-sm>li:first-child>a,.pagination-sm>li:first-child>span{border-top-left-radius:3px;border-bottom-left-radius:3px}
-
-.pagination-sm>li:last-child>a,.pagination-sm>li:last-child>span{border-top-right-radius:3px;border-bottom-right-radius:3px}
