--- a/WebContent/css/myPage1.css
+++ b/WebContent/css/myPage1.css
@@ -3053,8 +3053,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #c0c0c0;
+  border-color: #808080;
 }
 
 .btn-secondary {
