--- a/WebContent/css/myPage0.css
+++ b/WebContent/css/myPage0.css
@@ -3038,6 +3038,9 @@ textarea.form-control-lg {
   border-color: #ddc4f9;
   box-shadow: 0 0 0 0.15rem #ddc4f9;
 }
+
+
+
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
   background-color: #ddc4f9;
@@ -3053,9 +3056,9 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.15rem #ddc4f9;
 }
 .btn-primary:disabled, .btn-primary.disabled {
-  color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  color: #ced4da;
+  background-color: #fff;
+  border-color: #ced4da;
 }
 
 .btn-secondary {
